@@ -1,5 +1,5 @@
 .\"
-.\" $Id: smidump.1.in,v 1.11 2000/08/18 12:11:31 strauss Exp $
+.\" $Id: smidump.1.in,v 1.12 2000/08/18 13:15:03 strauss Exp $
 .\"
 .TH smidump 1  "August 18, 2000" "IBR" "SMI Tools"
 .SH NAME
@@ -129,10 +129,10 @@ C source code header file for usage within the UCD SNMP agent (experimental).
 ucd-c
 C source code file for usage within the UCD SNMP agent (experimental).
 .TP
-cn-dia
+cm-dia
 Reverse engineered conceptual model in DIA XML file format (experimental).
 .TP
-cn-xplain
+cm-xplain
 Details about the reverse engineering process (experimental).
 .TP
 jax
@@ -158,5 +158,5 @@ project is documented at
 .PP
 .BR smilint "(1)"
 .SH "AUTHOR"
-(C) 1999,2000 Frank Strauss, TU Braunschweig, Germany <strauss@ibr.cs.tu-bs.de>
+(C) 1999, 2000 Frank Strauss, TU Braunschweig, Germany <strauss@ibr.cs.tu-bs.de>
 .br
