@@ -1,5 +1,5 @@
 .\"
-.\" $Id: smiquery.1.in,v 1.3 1999/12/14 12:00:21 strauss Exp $
+.\" $Id: smiquery.1.in,v 1.4 2000/02/12 14:31:55 strauss Exp $
 .\"
 .TH smiquery 1  "February 11, 2000" "IBR" "SMI Tools"
 .SH NAME
@@ -61,5 +61,5 @@ The
 project is documented at
 .BR "http://www.ibr.cs.tu-bs.de/projects/libsmi/" "."
 .SH "AUTHOR"
-(C) 1999,2000 Frank Strauss, TU Braunschweig, Germany <strauss@ibr.cs.tu-bs.de>
+(C) 1999, 2000 Frank Strauss, TU Braunschweig, Germany <strauss@ibr.cs.tu-bs.de>
 .br
